# ur_sim

./: CMakeLists.txt  README.md  package.xml
config/: ur5_controllers_gripper.yaml
launch/: spawn_ur5_camera_gripper_moveit.launch.py  view_ur5_camera_gripper.launch.py
rviz/: config_ur5_robotiq.rviz  view_ur5_camera.rviz
urdf/: camera.xacro  robotiq_gripper.ros2_control.xacro  robotiq_gripper_macro.xacro  ur5_camera.urdf.xacro  ur5_camera_gripper.urdf.xacro
