<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dafemedi@gmail.com">daniel</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

 <export>
    <build_type>ament_cmake</build_type>
    <!-- <gazebo_ros  gazebo_model_path = "/home/ws_moveit2/install/ur_sim/share/"/> -->
    <gazebo_ros  gazebo_model_path = "/home/daniel/ws_moveit2/install/robotiq_description/share/"/>
  </export>
</package>
